Modified   docs/ch4.md